adding about window

--- a/app/css/index.css
+++ b/app/css/index.css
@@ -28,17 +28,16 @@ body {
     color: #fff;
     padding-right: 6px;
     padding-top: 5px;
+    padding-bottom: 8px;
     text-align: right;
     text-indent: -10000px;
+    border-bottom: 2px solid #73E2F7;
+    border-top: 2px solid #73E2F7;
 }
 
 #main h1 img {
     height: 31px;
     width: 195px;
-}
-
-.separator {
-    border-bottom: 0px solid white;
 }
 
 .buttons {
@@ -92,6 +91,7 @@ body {
     -webkit-app-region: no-drag;
 }
 
+.about,
 .settings,
 .close {
     cursor: pointer;
@@ -106,6 +106,12 @@ body {
     -webkit-app-region: no-drag;
 }
 
+.about {
+   background: transparent url('../img/about.png') no-repeat 4px 4px;
+   background-size: 24px 24px;
+   right: 70px;
+}
+
 .settings {
     background: transparent url('../img/settings.png') no-repeat 4px 4px;
     background-size: 24px 24px;
@@ -117,4 +123,3 @@ body {
     background-size: 24px 24px;
     right: 6px;
 }
-
