--- a/app/css/index.css
+++ b/app/css/index.css
@@ -10,7 +10,7 @@ body {
 
 #main {
     background: #1DCCEB;
-    border-bottom: 3px solid #73E2F7;
+    border-bottom: 3px solid #044D7F;
     height: 540px;
 }
 
